[tool.poetry]
name = "nonebot-plugin-reminder"
version = "0.1.0"
description = ""
authors = ["velor2012 <38395332+velor2012@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nonebot-adapter-onebot = "^2.3.1"
chinese-calendar = "^1.9.0"
nonebot = "^1.9.1"
nonebot2 = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
